endpoints dos stickers simples sem vinculo com o usuário ainda
